--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -28,7 +28,7 @@ server {
     # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
     #
     location ~ \.php$ {
-        root           /var/www/public;
+        root           /var/www/html;
         fastcgi_pass   php:9000;
         fastcgi_index  index.php;
         fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
